quesma/eql/parser/eql_parser.go
// Code generated from quesma/eql/parser/EQL.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // EQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type EQLParser struct {
	*antlr.BaseParser
}

var EQLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func eqlParserInit() {
	staticData := &EQLParserStaticData
	staticData.LiteralNames = []string{
		"", "'|'", "'where'", "'sequence'", "'by'", "'with'", "'maxspan'", "'='",
		"'['", "']'", "'sample'", "'not'", "'('", "')'", "'=='", "'!='", "'>'",
		"'<'", "'>='", "'<='", "':'", "'like'", "'like~'", "'regex'", "'regex~'",
		"'in'", "'in~'", "'and'", "'or'", "','", "'null'", "'*'", "'/'", "'%'",
		"'+'", "'-'", "'head'", "'tail'", "'count'", "'unique'", "'filter'",
		"'sort'", "'~'", "'any'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "ANY", "MULTILINE_COMMENT", "ONELINE_COMMNET",
		"BOOLEAN", "INTERVAL", "NUMBER", "ESC", "STRING", "WS", "ID",
	}
	staticData.RuleNames = []string{
		"query", "simpleQuery", "sequenceQuery", "sampleQuery", "condition",
		"category", "field", "fieldList", "literal", "literalList", "value",
		"pipe", "funcall", "funcName", "interval",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// EQLParserInit initializes any static state used to implement EQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewEQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func EQLParserInit() {
	staticData := &EQLParserStaticData
	staticData.once.Do(eqlParserInit)
}

// NewEQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewEQLParser(input antlr.TokenStream) *EQLParser {
	EQLParserInit()
	this := new(EQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &EQLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "EQL.g4"

	return this
}

// EQLParser tokens.
const (
	EQLParserEOF               = antlr.TokenEOF
	EQLParserT__0              = 1
	EQLParserT__1              = 2
	EQLParserT__2              = 3
	EQLParserT__3              = 4
	EQLParserT__4              = 5
	EQLParserT__5              = 6
	EQLParserT__6              = 7
	EQLParserT__7              = 8
	EQLParserT__8              = 9
	EQLParserT__9              = 10
	EQLParserT__10             = 11
	EQLParserT__11             = 12
	EQLParserT__12             = 13
	EQLParserT__13             = 14
	EQLParserT__14             = 15
	EQLParserT__15             = 16
	EQLParserT__16             = 17
	EQLParserT__17             = 18
	EQLParserT__18             = 19
	EQLParserT__19             = 20
	EQLParserT__20             = 21
	EQLParserT__21             = 22
	EQLParserT__22             = 23
	EQLParserT__23             = 24
	EQLParserT__24             = 25
	EQLParserT__25             = 26
	EQLParserT__26             = 27
	EQLParserT__27             = 28
	EQLParserT__28             = 29
	EQLParserT__29             = 30
	EQLParserT__30             = 31
	EQLParserT__31             = 32
	EQLParserT__32             = 33
	EQLParserT__33             = 34
	EQLParserT__34             = 35
	EQLParserT__35             = 36
	EQLParserT__36             = 37
	EQLParserT__37             = 38
	EQLParserT__38             = 39
	EQLParserT__39             = 40
	EQLParserT__40             = 41
	EQLParserT__41             = 42
	EQLParserANY               = 43
	EQLParserMULTILINE_COMMENT = 44
	EQLParserONELINE_COMMNET   = 45
	EQLParserBOOLEAN           = 46
	EQLParserINTERVAL          = 47
	EQLParserNUMBER            = 48
	EQLParserESC               = 49
	EQLParserSTRING            = 50
	EQLParserWS                = 51
	EQLParserID                = 52
)

// EQLParser rules.
const (
	EQLParserRULE_query         = 0
	EQLParserRULE_simpleQuery   = 1
	EQLParserRULE_sequenceQuery = 2
	EQLParserRULE_sampleQuery   = 3
	EQLParserRULE_condition     = 4
	EQLParserRULE_category      = 5
	EQLParserRULE_field         = 6
	EQLParserRULE_fieldList     = 7
	EQLParserRULE_literal       = 8
	EQLParserRULE_literalList   = 9
	EQLParserRULE_value         = 10
	EQLParserRULE_pipe          = 11
	EQLParserRULE_funcall       = 12
	EQLParserRULE_funcName      = 13
	EQLParserRULE_interval      = 14
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	SimpleQuery() ISimpleQueryContext
	SequenceQuery() ISequenceQueryContext
	SampleQuery() ISampleQueryContext
	AllPipe() []IPipeContext
	Pipe(i int) IPipeContext

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_query
	return p
}

func InitEmptyQueryContext(p *QueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_query
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EQLParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(EQLParserEOF, 0)
}

func (s *QueryContext) SimpleQuery() ISimpleQueryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISimpleQueryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISimpleQueryContext)
}

func (s *QueryContext) SequenceQuery() ISequenceQueryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISequenceQueryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISequenceQueryContext)
}

func (s *QueryContext) SampleQuery() ISampleQueryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISampleQueryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISampleQueryContext)
}

func (s *QueryContext) AllPipe() []IPipeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPipeContext); ok {
			len++
		}
	}

	tst := make([]IPipeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPipeContext); ok {
			tst[i] = t.(IPipeContext)
			i++
		}
	}

	return tst
}

func (s *QueryContext) Pipe(i int) IPipeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipeContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EQLVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EQLParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, EQLParserRULE_query)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case EQLParserANY, EQLParserSTRING, EQLParserID:
		{
			p.SetState(30)
			p.SimpleQuery()
		}

	case EQLParserT__2:
		{
			p.SetState(31)
			p.SequenceQuery()
		}

	case EQLParserT__9:
		{
			p.SetState(32)
			p.SampleQuery()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == EQLParserT__0 {
		{
			p.SetState(35)
			p.Match(EQLParserT__0)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(36)
			p.Pipe()
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(42)
		p.Match(EQLParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	if false {
		goto errorExit // Trick to prevent compiler error if the label is not used
	}
	return localctx
}

// ISimpleQueryContext is an interface to support dynamic dispatch.
type ISimpleQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Category() ICategoryContext
	Condition() IConditionContext

	// IsSimpleQueryContext differentiates from other interfaces.
	IsSimpleQueryContext()
}

type SimpleQueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimpleQueryContext() *SimpleQueryContext {
	var p = new(SimpleQueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_simpleQuery
	return p
}

func InitEmptySimpleQueryContext(p *SimpleQueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_simpleQuery
}

func (*SimpleQueryContext) IsSimpleQueryContext() {}

func NewSimpleQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SimpleQueryContext {
	var p = new(SimpleQueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EQLParserRULE_simpleQuery

	return p
}

func (s *SimpleQueryContext) GetParser() antlr.Parser { return s.parser }

func (s *SimpleQueryContext) Category() ICategoryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICategoryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICategoryContext)
}

func (s *SimpleQueryContext) Condition() IConditionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionContext)
}

func (s *SimpleQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SimpleQueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SimpleQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.EnterSimpleQuery(s)
	}
}

func (s *SimpleQueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.ExitSimpleQuery(s)
	}
}

func (s *SimpleQueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EQLVisitor:
		return t.VisitSimpleQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EQLParser) SimpleQuery() (localctx ISimpleQueryContext) {
	localctx = NewSimpleQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, EQLParserRULE_simpleQuery)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Category()
	}
	{
		p.SetState(45)
		p.Match(EQLParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(46)
		p.condition(0)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	if false {
		goto errorExit // Trick to prevent compiler error if the label is not used
	}
	return localctx
}

// ISequenceQueryContext is an interface to support dynamic dispatch.
type ISequenceQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllFieldList() []IFieldListContext
	FieldList(i int) IFieldListContext
	Interval() IIntervalContext
	AllSimpleQuery() []ISimpleQueryContext
	SimpleQuery(i int) ISimpleQueryContext

	// IsSequenceQueryContext differentiates from other interfaces.
	IsSequenceQueryContext()
}

type SequenceQueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySequenceQueryContext() *SequenceQueryContext {
	var p = new(SequenceQueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_sequenceQuery
	return p
}

func InitEmptySequenceQueryContext(p *SequenceQueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_sequenceQuery
}

func (*SequenceQueryContext) IsSequenceQueryContext() {}

func NewSequenceQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SequenceQueryContext {
	var p = new(SequenceQueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EQLParserRULE_sequenceQuery

	return p
}

func (s *SequenceQueryContext) GetParser() antlr.Parser { return s.parser }

func (s *SequenceQueryContext) AllFieldList() []IFieldListContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldListContext); ok {
			len++
		}
	}

	tst := make([]IFieldListContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldListContext); ok {
			tst[i] = t.(IFieldListContext)
			i++
		}
	}

	return tst
}

func (s *SequenceQueryContext) FieldList(i int) IFieldListContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldListContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldListContext)
}

func (s *SequenceQueryContext) Interval() IIntervalContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIntervalContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIntervalContext)
}

func (s *SequenceQueryContext) AllSimpleQuery() []ISimpleQueryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISimpleQueryContext); ok {
			len++
		}
	}

	tst := make([]ISimpleQueryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISimpleQueryContext); ok {
			tst[i] = t.(ISimpleQueryContext)
			i++
		}
	}

	return tst
}

func (s *SequenceQueryContext) SimpleQuery(i int) ISimpleQueryContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISimpleQueryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISimpleQueryContext)
}

func (s *SequenceQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SequenceQueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SequenceQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.EnterSequenceQuery(s)
	}
}

func (s *SequenceQueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.ExitSequenceQuery(s)
	}
}

func (s *SequenceQueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EQLVisitor:
		return t.VisitSequenceQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EQLParser) SequenceQuery() (localctx ISequenceQueryContext) {
	localctx = NewSequenceQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, EQLParserRULE_sequenceQuery)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(EQLParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == EQLParserT__3 {
		{
			p.SetState(49)
			p.Match(EQLParserT__3)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(50)
			p.FieldList()
		}

	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == EQLParserT__4 {
		{
			p.SetState(53)
			p.Match(EQLParserT__4)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(54)
			p.Match(EQLParserT__5)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(55)
			p.Match(EQLParserT__6)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(56)
			p.Interval()
		}

	}
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == EQLParserT__7 {
		{
			p.SetState(59)
			p.Match(EQLParserT__7)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(60)
			p.SimpleQuery()
		}
		{
			p.SetState(61)
			p.Match(EQLParserT__8)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(64)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == EQLParserT__3 {
			{
				p.SetState(62)
				p.Match(EQLParserT__3)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(63)
				p.FieldList()
			}

		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	if false {
		goto errorExit // Trick to prevent compiler error if the label is not used
	}
	return localctx
}

// ISampleQueryContext is an interface to support dynamic dispatch.
type ISampleQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FieldList() IFieldListContext
	AllSimpleQuery() []ISimpleQueryContext
	SimpleQuery(i int) ISimpleQueryContext

	// IsSampleQueryContext differentiates from other interfaces.
	IsSampleQueryContext()
}

type SampleQueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySampleQueryContext() *SampleQueryContext {
	var p = new(SampleQueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_sampleQuery
	return p
}

func InitEmptySampleQueryContext(p *SampleQueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_sampleQuery
}

func (*SampleQueryContext) IsSampleQueryContext() {}

func NewSampleQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SampleQueryContext {
	var p = new(SampleQueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EQLParserRULE_sampleQuery

	return p
}

func (s *SampleQueryContext) GetParser() antlr.Parser { return s.parser }

func (s *SampleQueryContext) FieldList() IFieldListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldListContext)
}

func (s *SampleQueryContext) AllSimpleQuery() []ISimpleQueryContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISimpleQueryContext); ok {
			len++
		}
	}

	tst := make([]ISimpleQueryContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISimpleQueryContext); ok {
			tst[i] = t.(ISimpleQueryContext)
			i++
		}
	}

	return tst
}

func (s *SampleQueryContext) SimpleQuery(i int) ISimpleQueryContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISimpleQueryContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISimpleQueryContext)
}

func (s *SampleQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SampleQueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SampleQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.EnterSampleQuery(s)
	}
}

func (s *SampleQueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(EQLListener); ok {
		listenerT.ExitSampleQuery(s)
	}
}

func (s *SampleQueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case EQLVisitor:
		return t.VisitSampleQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *EQLParser) SampleQuery() (localctx ISampleQueryContext) {
	localctx = NewSampleQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, EQLParserRULE_sampleQuery)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Match(EQLParserT__9)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(71)
		p.Match(EQLParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(72)
		p.FieldList()
	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == EQLParserT__7 {
		{
			p.SetState(73)
			p.Match(EQLParserT__7)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(74)
			p.SimpleQuery()
		}
		{
			p.SetState(75)
			p.Match(EQLParserT__8)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(79)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	if false {
		goto errorExit // Trick to prevent compiler error if the label is not used
	}
	return localctx
}

// IConditionContext is an interface to support dynamic dispatch.
type IConditionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsConditionContext differentiates from other interfaces.
	IsConditionContext()
}

type ConditionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionContext() *ConditionContext {
	var p = new(ConditionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_condition
	return p
}

func InitEmptyConditionContext(p *ConditionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = EQLParserRULE_condition
}

func (*ConditionContext) IsConditionContext() {}

func NewConditionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConditionContext {
	var p = new(ConditionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = EQLParserRULE_condition

	return p
}

func (s *ConditionContext) GetParser() antlr.Parser { return s.parser }

func (s *ConditionContext) CopyAll(ctx *ConditionContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ConditionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConditionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type LookupOpListContext struct {
	ConditionContext
	op   antlr.Token
	list ILiteralListContext
}
